--- a/Dating/app/src/main/res/values/colors.xml
+++ b/Dating/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="mainColor">#FF9999</color>
 </resources>
